# matslise2d

./: .gitignore  CMakeLists.txt  docker_build.sh
.github/workflows/: matslise2d.yml  pyslise2d_wheels.yml
matslise2d/: matslise2d.h  matslise3d.h  matsliseNd.h
matslise2d/matslise2d/: basisQuadrature.cpp  basisQuadrature.h  basisQuadrature_lobatto.cpp  eigenfunctions.cpp  etaIntegrals.h  halfrange.cpp  instantiate.h  matslise2d.cpp  sector.cpp
matslise2d/matslise3d/: instantiate.h  matslise3d.cpp  sector.cpp
matslise2d/matsliseNd/: instantiate.h  matsliseNd.impl.h  sector.cpp
matslise2d/pyslise2d/: module.cpp  module.h  pyslise2d.cpp  pyslise3d.cpp  setup.py
matslise2d/util/: instantiate.h  matching.h  quadrature.cpp  quadrature.h
test/matslise2d/: checkOrthonormality.h  coulomb.cpp  derivatives.cpp  henon.cpp  ixaru.cpp  pentagon.cpp  quadrature.cpp  quartic.cpp  twoSextic.cpp  zero.cpp
test/matslise3d/: coulomb.cpp  harmonic_oscillator.cpp
test/pyslise2d/: test_docs.py
test/util/: calculateEta.cpp  heap.cpp  quadrature.cpp  rectangle.cpp
